--- a/style.css
+++ b/style.css
@@ -1,11 +1,54 @@
 html, body {
 	height: 100%;
 }
+.navbar-brand {
+	font-size: 1.3em;
+}
 
-.container { 
-  background-image: url('fog.jpg'); 
-  height: 100%;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
+#topContainer {
+	background-image: url('image.jpg');
+	background-size: cover;
+}
+
+#topRow {
+	margin-top: 100px;
+	text-align: center;
+}
+
+#topRow h1 {
+	font-size: 3em;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.marTop {
+	margin-top: 30px;
+}
+
+.center {
+	text-align: center;
+}
+
+.title {
+	font-size: 3em;
+	margin-top: 100px;
+}
+
+#footer {
+	background-color: #b3ffe5;
+}
+
+.marBot {
+	margin-bottom: 30px;
+}
+
+.appstore {
+	width: 250px;
+}
+
+#footer {
+	padding-top: 70px;
+	width: 100%;
 }
